--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,20 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="fill_parent"
-              android:layout_height="fill_parent"
-              android:background="#d2d2d2">
-    <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="This is a common pattern, but against Google's suggestions"
-            android:textColor="#000000"/>
-    <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/navigation_drawer_button"
-            android:id="@+id/navigation_drawer_button"
-            android:layout_gravity="center"/>
-</LinearLayout>
+<FrameLayout  xmlns:android="http://schemas.android.com/apk/res/android"
+              android:id="@+id/content_frame"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent">
 
+    <LinearLayout android:orientation="vertical"
+                  android:layout_width="fill_parent"
+                  android:layout_height="fill_parent"
+                  android:layout_gravity="center"
+                  android:background="#d2d2d2">
+        <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/main_text_content"
+                android:text="@string/main_text"
+                android:textColor="#000000"/>
+        <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/navigation_drawer_button"
+                android:id="@+id/navigation_drawer_button"/>
+    </LinearLayout>
+</FrameLayout>
