--- a/res/layout/navigation_drawer.xml
+++ b/res/layout/navigation_drawer.xml
@@ -9,19 +9,23 @@
             android:id="@+id/content_frame"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/navigation_drawer_text"
-                android:id="@+id/navigation_drawer_text"
-                android:layout_gravity="center"
-                android:textColor="#000000"/>
-        <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/see_main_activity_button"
-                android:id="@+id/see_main_activity_button"
-                android:layout_gravity="center"/>
+        <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:layout_gravity="center">
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/navigation_drawer_text"
+                    android:id="@+id/navigation_drawer_text"
+                    android:textColor="#000000"/>
+            <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/see_main_activity_button"
+                    android:id="@+id/see_main_activity_button"/>
+        </LinearLayout>
 
     </FrameLayout>
     <!-- The navigation drawer -->
